--- a/targets-cli-beta.conf
+++ b/targets-cli-beta.conf
@@ -1,23 +1,5 @@
 # JetHub H1 (j80)
-jethubj80                    current         bullseye     cli                      beta         yes
-jethubj80                    edge            bullseye     cli                      beta         yes
-jethubj80                    current         focal        cli                      beta         yes
-jethubj80                    edge            focal        cli                      beta         yes
-jethubj80                    current         hirsute      cli                      beta         yes
-jethubj80                    edge            hirsute      cli                      beta         yes
-#jethubj80                    current         impish       cli                      beta         yes
-#jethubj80                    edge            impish       cli                      beta         yes
-#jethubj80                    current         jammy        cli                      beta         yes
-#jethubj80                    edge            jammy        cli                      beta         yes
+jethubj80                    edge            jammy        cli                      beta         yes
 
 # JetHub D1 (j100)
-jethubj100                   current         bullseye     cli                      beta         yes
-jethubj100                   edge            bullseye     cli                      beta         yes
-jethubj100                   current         focal        cli                      beta         yes
-jethubj100                   edge            focal        cli                      beta         yes
-jethubj100                   current         hirsute      cli                      beta         yes
-jethubj100                   edge            hirsute      cli                      beta         yes
-#jethubj100                   current         impish       cli                      beta         yes
-#jethubj100                   edge            impish       cli                      beta         yes
-#jethubj100                   current         jammy        cli                      beta         yes
-#jethubj100                   edge            jammy        cli                      beta         yes
+jethubj100                   edge            jammy        cli                      beta         yes
