Add debian to build

--- a/targets.conf
+++ b/targets.conf
@@ -3,10 +3,12 @@
 #################################################################################################################################################################
 
 # JetHub H1 (j80)
+jethubj80                 edge            bullseye    cli                      stable         yes
 jethubj80                 current         focal       cli                      stable         yes
 jethubj80                 edge            focal       cli                      stable         yes
 
 # JetHub D1 (j100)
+jethubj100                edge            bullseye    cli                      stable         yes
 jethubj100                current         focal       cli                      stable         yes
 jethubj100                edge            focal       cli                      stable         yes
 
