--- a/targets-cli-beta.conf
+++ b/targets-cli-beta.conf
@@ -1,9 +1,11 @@
 # JetHub H1 (j80)
 jethubj80                    edge            sid          cli                      beta         yes
+jethubj80                    edge            bullseye     cli                      beta         yes
 jethubj80                    edge            jammy        cli                      beta         yes
 jethubj80                    edge            focal        cli                      beta         yes
 
 # JetHub D1 (j100)
 jethubj100                   edge            sid          cli                      beta         yes
+jethubj100                   edge            bullseye     cli                      beta         yes
 jethubj100                   edge            jammy        cli                      beta         yes
 jethubj100                   edge            focal        cli                      beta         yes
