--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -93,7 +93,7 @@ jobs:
       matrix:
         node: ${{fromJson(needs.Prepare.outputs.matrix)}}
 
-    runs-on: ${{ inputs.runner }}
+    runs-on: [self-hosted, ${{ inputs.runner }}]
     steps:
       - name: Checkout scripts repository
         uses: actions/checkout@v2
