--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -92,7 +92,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ${{fromJson(needs.Prepare.outputs.matrix)}}
-    runs-on: [self-hosted, ${{ inputs.runner }} ]
+    runs-on: ${{ inputs.runner }}
     steps:
       - name: Checkout scripts repository
         uses: actions/checkout@v2
