--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -168,7 +168,7 @@ jobs:
       - name: Assemble
         run: |
 
-          export TERM=dumb
+          #export TERM=dumb
           cd build
           
           var="${{ inputs.variant }}"
@@ -210,7 +210,7 @@ jobs:
           [[ ${BUILD_TARGET} == "minimal" ]] && BUILD_MINIMAL="yes"
           [[ ! -f .ignore_changes ]] && sudo touch .ignore_changes
 
-          sudo sed -i "s/-it --rm/-i --rm/" userpatches/config-docker.conf          
+          sudo sed -i "s/ -it / -i /" userpatches/config-docker.conf
           ./compile.sh docker \
           BETA="${BETA}" \
           RELEASE="${RELEASE}" \
