--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -133,7 +133,7 @@ jobs:
          [[ -e VER ]] && VER="$(cat VER)"
          [[ -z $VER ]] && VER="0"
          sed -i "s/$/.jethome.$VER/" VERSION
-          
+
       - name: Pull Docker image
         run: |
 
@@ -141,7 +141,7 @@ jobs:
           sudo docker kill $(sudo docker ps -q) 2>/dev/null || true          
           sudo docker image rm $(sudo docker images | grep -v $(cat build/VERSION | sed 's/trunk.*/trunk/')"-$(dpkg --print-architecture)" | awk 'NR>1 {print $3}') 2> /dev/null || true 
           sudo docker pull ghcr.io/armbian/build:$(cat build/VERSION  | cut -d"." -f1-2)"-$(dpkg --print-architecture)"
-          
+
       - name: Fix permissions
         run: |
           # make sure no temporally dirs are mounted from previous runs
@@ -250,7 +250,8 @@ jobs:
       - name: Deploy to server
         run: |
           #echo $(ls build/output/images)
-          ls -l build/output/images/
+          #ls -l build/output/images/
+          find build/output/images/
           #sudo apt-get -y -qq install lftp          
           #lftp -u upload, -e "set net:timeout 4;set net:max-retries 6;mirror --Remove-source-files -R --no-empty-dirs --parallel=8 --no-perms $(pwd)/build/output/images/ images/ ;bye" sftp://users.armbian.com
 
