--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -132,6 +132,7 @@ jobs:
          echo "TERM=xterm" >> $GITHUB_ENV
          [[ -e VER ]] && VER="$(cat VER)"
          [[ -z $VER ]] && VER="0"
+         cp VERSION VERSION.old
          sed -i "s/$/.jethome.$VER/" VERSION
 
       - name: Pull Docker image
@@ -237,6 +238,8 @@ jobs:
           sudo chown -R $USER.$USER output/images/$BOARD 2> /dev/null || true
           sudo chmod 644 output/images/$BOARD/*/*.xz  2> /dev/null || true
           echo ${{ secrets.GPG_PASSPHRASE }} | gpg --passphrase-fd 0 --armor --detach-sign --pinentry-mode loopback --batch --yes output/images/$BOARD/$MAKE_FOLDERS/*.img.xz
+          rm VERSION
+          mv VERSION.old VERSION
 
       - name: Install SSH key for storage
         uses: shimataro/ssh-key-action@v2
@@ -251,6 +254,8 @@ jobs:
           #ls -l build/output/images/
           find build/output/images/
           echo ${{ matrix.node }} ! ${{ inputs.variant }}
+          # build/output/images/${{ matrix.node }}/nightly/
+          # Armbian_22.05.0-trunk.0006.jethome.0_Jethubj100_sid_edge_5.15.28.img.xz
           #sudo apt-get -y -qq install lftp
           #lftp -u upload, -e "set net:timeout 4;set net:max-retries 6;mirror --Remove-source-files -R --no-empty-dirs --parallel=8 --no-perms $(pwd)/build/output/images/ images/ ;bye" sftp://users.armbian.com
 
