--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -291,9 +291,11 @@ jobs:
           # beta/rc/stable
           var="${{ inputs.variant }}"
           if [[ "$var" != *beta ]]; then
-            UBOOTDEB="output/debs/linux-image-edge-meson64_${VERSION}_arm64.deb"
+            LINUXDEB="output/debs/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
+            UBOOTDEB="output/debs/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
           else
-            UBOOTDEB="output/debs-beta/linux-image-edge-meson64_${VERSION}_arm64.deb"
+            LINUXDEB="debs-beta/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
+            UBOOTDEB="debs-beta/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
           fi
           LINUXVER=$(dpkg --info ${UBOOTDEB} | awk -F"-" '/Source:/{print $2}')
           echo "LINUXVER=${LINUXVER}"  >> $GITHUB_ENV
@@ -302,13 +304,15 @@ jobs:
       - name: Convert image to burn
         run: |
           cd tools
-          dpkg -x "../build/${UBOOTDEB}" output
+          dpkg -x "../build/output/${UBOOTDEB}" output
+          IMAGENAME="${BOARD}/${DEPLOYFOLDER}/Armbian_${VERSION}_${BOARD^}_${RELEASE}_${BRANCH}_${LINUXVER}.img.xz"
           if [[ "${BOARD}" == "jethubj100" ]]; then
             [[ -d output/usr/lib/linux*/uboot.nosd.bin ]] && cp output/usr/lib/linux*/u-boot.nosd.bin src/j100/u-boot.armbian.bin
-            ./convert.sh ../build/output/images/${BOARD}/${DEPLOYFOLDER}/Armbian_${$VERSION}_${BOARD^}_${RELEASE}_${BRANCH}_*img.xz d1 armbian compress output/usr/lib/linux*/u-boot.nosd.bin 
+            echo ./convert.sh ../build/output/images/${IMAGENAME} d1 armbian compress output/usr/lib/linux*/u-boot.nosd.bin 
+
           else
             [[ -d output/usr/lib/linux*/uboot.nosd.bin ]] && cp output/usr/lib/linux*/u-boot.nosd.bin src/j80/u-boot.armbian.bin
-            ./convert.sh ../build/output/images/${BOARD}/${DEPLOYFOLDER}/Armbian_${$VERSION}_${BOARD^}_${RELEASE}_${BRANCH}_*img.xz h1 armbian compress output/usr/lib/linux*/u-boot.nosd.bin 
+            echo ./convert.sh ../build/output/images/${IMAGENAME} h1 armbian compress output/usr/lib/linux*/u-boot.nosd.bin 
           fi
           rm -rf output/*
 
