--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -292,12 +292,12 @@ jobs:
           var="${{ inputs.variant }}"
           if [[ "$var" != *beta ]]; then
             LINUXDEB="output/debs/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
-            UBOOTDEB="output/debs/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
+            UBOOTDEB="debs/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
           else
-            LINUXDEB="debs-beta/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
+            LINUXDEB="output/debs-beta/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
             UBOOTDEB="debs-beta/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
           fi
-          LINUXVER=$(dpkg --info ${UBOOTDEB} | awk -F"-" '/Source:/{print $2}')
+          LINUXVER=$(dpkg --info ${LINUXDEB} | awk -F"-" '/Source:/{print $2}')
           echo "LINUXVER=${LINUXVER}"  >> $GITHUB_ENV
           echo "UBOOTDEB=${UBOOTDEB}"  >> $GITHUB_ENV
 
