--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -289,20 +289,30 @@ jobs:
         run: |
           cd build
           # beta/rc/stable
+
           var="${{ inputs.variant }}"
           echo var=$var
-          echo [[ "$var" != *beta ]]
           if [[ "$var" != *beta ]]; then
-            LINUXDEB="output/debs/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
-            UBOOTDEB="debs/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
-            echo ! $LINUXDEB !
+            DEBPATH="debs"
+            echo DEBPATH = ! $DEBPATH !
           else
-            LINUXDEB="output/debs-beta/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
-            UBOOTDEB="debs-beta/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
-            echo ! $LINUXDEB !
+            DEBPATH="debs-beta"
+            echo DEBPATH = ! $DEBPATH !
           fi
+          #echo [[ "$var" != *beta ]]
+          #if [[ "$var" != *beta ]]; then
+          #  LINUXDEB="output/debs/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
+          #  UBOOTDEB="debs/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
+          #  echo ! $LINUXDEB !
+          #else
+          #  LINUXDEB="output/debs-beta/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
+          #  UBOOTDEB="debs-beta/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
+          #  echo ! $LINUXDEB !
+          #fi
+          LINUXDEB="output/${DEBPATH}/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
+          UBOOTDEB="${DEBPATH}/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
 
-          echo LINUXVER=$(dpkg --info ${LINUXDEB} | awk -F"-" '/Source:/{print $2}')
+          echo LINUXVER=(dpkg --info ${LINUXDEB} | awk -F"-" '/Source:/{print $2}')
           LINUXVER=$(dpkg --info ${LINUXDEB} | awk -F"-" '/Source:/{print $2}')
           echo "LINUXVER=${LINUXVER}"  >> $GITHUB_ENV
           echo "UBOOTDEB=${UBOOTDEB}"  >> $GITHUB_ENV
