--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -310,9 +310,9 @@ jobs:
           #  echo ! $LINUXDEB !
           #fi
           LINUXDEB="output/${DEBPATH}/linux-image-${BRANCH}-meson64_${VERSION}_arm64.deb"
-          UBOOTDEB="${DEBPATH}/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb
+          UBOOTDEB="${DEBPATH}/linux-u-boot-${BRANCH}-${BOARD}_${VERSION}_arm64.deb"
 
-          echo LINUXVER=(dpkg --info ${LINUXDEB} | awk -F"-" '/Source:/{print $2}')
+          echo LINUXVER=(dpkg --info ${LINUXDEB} 
           LINUXVER=$(dpkg --info ${LINUXDEB} | awk -F"-" '/Source:/{print $2}')
           echo "LINUXVER=${LINUXVER}"  >> $GITHUB_ENV
           echo "UBOOTDEB=${UBOOTDEB}"  >> $GITHUB_ENV
