--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -61,13 +61,6 @@ jobs:
           ref: ${{ inputs.sourcerepo }}
           clean: false
 
-      - name: Checkout jethome-scripts repository
-        uses: actions/checkout@v2
-        with:
-          repository: jethome-ru/build-armbian-scripts
-          path: scripts
-          ref: master
-
       - name: Remove previous artefacts if any
         run: |
           sudo rm -rf changes 2>/dev/null || true
@@ -82,15 +75,15 @@ jobs:
         run: |
           var="${{ inputs.variant }}"
           if [[ "$var" != *beta ]]; then
-            FILENAME="scripts/targets.conf build/config/targets.conf | sort | uniq | grep ${var%:*} | grep \"yes\|adv\""
+            FILENAME="targets.conf | grep ${var%:*} | grep \"yes\|adv\""
           else
-            FILENAME="scripts/targets-${var%:*}-beta.conf build/config/targets-${var%:*}-beta.conf | sort | uniq"
+            FILENAME="targets-${var%:*}-beta.conf"
           fi
           
           # if we want to split more
           # MATRIX=$(split --number=l/${{ inputs.part }}/${{ inputs.of }} <<<
                   
-          MATRIX="cat "${FILENAME}" | grep -v \"^$\" | grep -v \"^#\" |  ${{ inputs.include }} ${{ inputs.exclude }}  cut -f1 -d ' ' | pr -t -n4 | tr -s '[:blank:]' ':' | cut -d\":\" -f2,3"
+          MATRIX="cat build/config/"${FILENAME}" | grep -v \"^$\" | grep -v \"^#\" |  ${{ inputs.include }} ${{ inputs.exclude }}  cut -f1 -d ' ' | pr -t -n4 | tr -s '[:blank:]' ':' | cut -d\":\" -f2,3"
           #[ -s changes ] || unset MATRIX
           echo ::set-output name=matrix::$(for x in $(eval $MATRIX); do echo $x; done|jq -cnR '[inputs | select(length>0)]' | jq)
        
